<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.NewTask">

    <EditText
        android:id="@+id/edit_text_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task" />

    <EditText
        android:id="@+id/edit_text_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_task"
        android:layout_centerInParent="true"
        android:hint="@string/select_date"
        android:inputType="none"
        android:clickable="true"
        android:focusable="false"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/edit_text_select_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_select_date"
        android:layout_centerInParent="true"
        android:hint="@string/select_time"
        android:inputType="none"
        android:clickable="true"
        android:focusable="false"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_select_time"
        android:hint="Location"
        android:clickable="true"
        android:focusable="false"
        android:textAllCaps="false"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"/>

    <Button
        android:id="@+id/button_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_location"
        android:layout_centerInParent="true"
        android:text="@string/save_task"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_test_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_save_task"
        android:layout_centerInParent="true"
        android:text="@string/test_alarm"
        android:textAllCaps="false" />

    <ImageButton
        android:id="@+id/image_button_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_camera"
        android:layout_below="@id/button_test_alarm" />


</RelativeLayout>